Fixing IE layout issue. Adding readme

--- a/src/components/ImageItem.scss
+++ b/src/components/ImageItem.scss
@@ -18,6 +18,9 @@
   position: absolute;
   bottom: 0;
 
+  word-wrap: break-word;
+
+
   width: 100%;
   // hack!
   margin-bottom: 4px;
