--- a/src/components/LikeButton.scss
+++ b/src/components/LikeButton.scss
@@ -1,8 +1,8 @@
 .like-button {
-  position: absolute;
+  // position: absolute;
+  float: right;
 
-  top: 5px;
-  left: 5px;
+  margin: 5px;
 
   width: 48px;
   height: 48px;
